--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -26,6 +26,10 @@
                         <button class="btn btn-success btn-block">Login</button>
                     </form>
                 </div>
+                <h7 class="d-flex  justify-content-center text-primary">SIGN UP</h7>
+                <div class="h-100 d-flex  justify-content-center">
+                <p>username: sample and password: sample</p>
+                </div>
             </div>
         </div>
     </div>
