--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
             <div class="card shadow">
-                <img src="https://img.freepik.com/free-photo/modern-studio-apartment-design-with-bedroom-living-space_1262-12375.jpg?w=1060&t=st=1705141944~exp=1705142544~hmac=bab7cec4dce99ee011b7c1570e3534781bc8b0e19192d6f81a97f7839e9ade6f"
+                <img src="https://images.pexels.com/photos/271624/pexels-photo-271624.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="" class="card-img-top" />
                 <div class="card-body">
                     <h5 class="card-title">Login</h5>
